@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2522 2004/03/08 11:13:17 andijahja Exp $
+ * $Id: ChangeLog,v 1.2523 2004/03/08 12:44:06 andijahja Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-03-08 22:50 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
+  * source/rtl/inkey.c
+    ! minor fix to previous changes (check type of parameter).
+
 2004-03-08 19:50 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * source/rtl/inkey.c
     ! fix memory leaks on SETINKEYBEFOREBLOCK() and SETINKEYAFTERBLOCK()
